fix border on ios

--- a/app/assets/stylesheets/sage/system/patterns/elements/_switch.scss
+++ b/app/assets/stylesheets/sage/system/patterns/elements/_switch.scss
@@ -22,6 +22,7 @@
     appearance: none;
     color: $sage-switch-color-default;
     background: $sage-switch-color-default;
+    border: 0;
     border-radius: $sage-switch-border-radius;
     outline: none;
     transition: background 0.3s ease-out;
